# rust_winapi_shellcode

./: README.md
Process_Hollowing_CS/: CobaltStrike_OfficeMacro.vb
Process_Hollowing_CS/src/: main.rs
cobalt_hollowing_MS_office/: Cargo.toml
cobalt_hollowing_MS_office/src/: main.rs
winapi_mal/: Cargo.toml  memo  rust_payload_shellcode.py
winapi_mal/src/: main.rs
winapi_mal_mk2/: Cargo.toml  rust_payload_shellcode.py
winapi_mal_mk2/src/: main.rs
