[package]
name = "winapi_mal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.53.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
[dependencies]
kernel32-sys = "0.2.1"
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi", "synchapi", "winbase"] }
